version 0.9.0
date: xx-xx-2013
  * introduced Spring framework!
  * improved mirror-caching: now even the downloader for the mirror supports full content-negotiation

version 0.8.6
date: 04-02-2013
  * introduced standard (and homogeneous) serialization of RDF objects
  * fixed web import for non-inferrable-from-file_extension rdf formats

version 0.8.5.1
date: 22-05-2012
  * Bug fix release (see issue #84 and issue #85)

version 0.8.5
date: 22-05-2012
  * SKOS(-XL) officially supported

version 0.8.1
date: XX-XX-2011
  * completely refactored all ST projects to generate one single project as a maven multi-module project
    - rebuilt the build mechanism to account for project structure changes and to rely more on Maven
  * fixed bug in search preventing use of space separated keywords 
  * improved version number management, by reusing the same vn defined in the core ST for updating the
    previous one 
  * import is more robust when the passed URI is wrong for the ontology but it is a successful URL for
    retrieving its data (see issue 63)
  * added facility methods in XMLHelp class which simplify unit testing over XML responses

version 0.8.0
date: 10-10-2011
  * compatibility with Firefox 4.0 (changed bridgeComponent.js)
  * compatibility checked up to Firefox 9.0
  * introduction of new extension point in annotation mechanism (annotation.js and annotator.js and
    annotationComponent.js)
  * moved all images to skin/classic/1.0 and rearranged image references in all files accordingly
  * annotation.js: chkAnnotationEvent --> merged in chkAnnotation 
  * compatibility with Firefox 4.x->9.x : drag'n'drop mechanism (see bug: https://bugzilla.mozilla.org/show_bug.cgi?id=664963)

version 0.7.2
date: 20-01-2011
  * modified getSubClasses request from Cls.java for showing chosen labels instead of the class qname
  * fixed a BUG in the response packaging in the server to always reply with properly UTF-8 encoded characters